TestCases/Errors/threaded_movement/observations/aut_11_obs.spm
 obs   15-5   7.98977309044423e-05 
 obs   16-5   0.000159482745635398 
 obs   17-5   0.000243892593591218 
 obs   15-6   0.000149786705798749 
 obs   16-6   0.000182113352711353 
 obs   17-6   0.000201948051650347 
 obs   10-10   0.00233766233766234 
 obs   10-11   0.00303030303030303 
 obs   7-12   0.00717171717171717 
 obs   7-13   0.00545454545454545 
 obs   8-13   0.0109090909090909 
 obs   7-14   0.006 
 obs   8-14   0.00754545454545455 
 obs   9-14   0.0142857142857143 
 obs   7-16   0 
 obs   7-17   0.000948051948051948 
 obs   9-19   0.0169090909090909 
 obs   10-19   0.0929675819984744 
 obs   11-19   0.0444407546644389 
 obs   9-20   0.0185177865612648 
 obs   10-20   0.0445176667864415 
 obs   11-20   0.0306363636363636 
 error_value   15-5   0 
 error_value   16-5   0 
 error_value   17-5   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   17-6   0 
 error_value   10-10   0 
 error_value   10-11   0 
 error_value   7-12   0 
 error_value   7-13   0 
 error_value   8-13   0 
 error_value   7-14   0 
 error_value   8-14   0 
 error_value   9-14   0 
 error_value   7-16   0 
 error_value   7-17   0 
 error_value   9-19   0 
 error_value   10-19   0 
 error_value   11-19   0 
 error_value   9-20   0 
 error_value   10-20   0 
 error_value   11-20   0 
